# cwru-buai-assignments

./: .gitignore  LICENSE  README.md
0-akron-zoo/: .gitignore  PLAN.md  README.md  akron-zoo.ipynb  akron-zoo.py  main.py  pyproject.toml
1-churn-prediction/: README.md  Yang_Ruihuang_A1_Churn.ipynb  churn-prediction.ipynb  churn-prediction.py  pyproject.toml
10-buai445-micro-assignments/: M2.py  README.md  pyproject.toml
2-choice-models/: README.md  Yang_Ruihuang_A2_ChoiceModels.ipynb  Yang_Ruihuang_A2_ChoiceModels.py  Yang_Ruihuang_A2_ChoiceModels_v2.ipynb  choice-models.ipynb  choice-models.py  pyproject.toml
3-tokenization-lemmatization/: README.md  Yang_Ruihuang_A3_TokenizationLemmatization.ipynb  perf-testing.py  pyproject.toml  random-stuff.py  spacy_performance_test.csv  tokenization-lemmatization.ipynb  tokenization-lemmatization.py
4-reuters-classification/: README.md  Yang_Ruihuang_HW1.ipynb  pyproject.toml  reuters-classification.ipynb  reuters-classification.py
5-topic-modeling/: README.md  pyproject.toml  topic-modeling.ipynb  topic-modeling.py
6-buai446-capstone/: README.md  buai446-capstone.html  buai446-capstone.ipynb  buai446-capstone.py  pyproject.toml
7-llm/: README.md  Yang_Ruihuang_A5.ipynb  llm.ipynb  llm.py  pyproject.toml
8-buai435-final/: README.md  buai435-final.ipynb  buai435-final.py  data_head.txt  llm_example_code.py  pyproject.toml
8-buai435-final/outputs/tables/: baseline_metrics.json  classification_report_linear_svc.csv  classification_report_logistic_regression.csv  example_raw_reviews.csv  logistic_top_terms_by_class.csv  manual_label_subset.csv  missingness_summary.csv  preprocessing_before_after_examples.csv  product_topic_sentiment_counts.csv  review_sentiment_topic_assignments.csv  star_rating_distribution.csv  supervised_model_metrics.csv  tfidf_feature_summary.csv  topic_llm_summaries.csv  topic_sentiment_distribution.csv  topic_sentiment_trends.csv  topic_top_terms.csv
9-covid-chest-scans/: README.md  Yang_Ruihuang_HW2.ipynb  Yang_Ruihuang_HW2.py  pyproject.toml
template/: README.md  abc.py  pyproject.toml
