[project]
name = "3-tokenization-lemmatization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "matplotlib>=3.10.6",
    "nltk>=3.9.2",
    "pandas>=2.3.2",
    "pip>=25.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupytext>=1.17.3",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
