[project]
name = "buai435-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-md",
    "matplotlib>=3.10.6",
    "openai>=2.8.1",
    "pandas>=2.3.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.8",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupytext>=1.17.3",
]

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
